--- a/src/scss/_theme-default.scss
+++ b/src/scss/_theme-default.scss
@@ -2,7 +2,7 @@
 @import "~bulma/sass/utilities/initial-variables";
 
 /* Base: Size  */
-$size-base: 1rem;
+$size-base: 1em;
 $default-padding: $size-base * 1.5;
 
 /* Default font */
@@ -26,7 +26,7 @@ $navbar-input-placeholder-color: $grey-lighter;
 $navbar-box-shadow: 0 1px 0 rgba(24, 28, 33, .04);
 $navbar-divider-border: 1px solid rgba($grey-lighter, .25);
 $navbar-item-h-padding: $default-padding * .75;
-$navbar-avatar-size: 1.75rem;
+$navbar-avatar-size: 1.75em;
 
 /* Aside: Bulma override */
 $menu-item-radius: 0;
