--- a/src/scss/_theme-default.scss
+++ b/src/scss/_theme-default.scss
@@ -2,7 +2,7 @@
 @import "~bulma/sass/utilities/initial-variables";
 
 /* Base: Size  */
-$size-base: 1em;
+$size-base: 0.9em;
 $default-padding: $size-base * 1.5;
 
 /* Default font */
@@ -10,7 +10,7 @@ $family-sans-serif: "Nunito", sans-serif;
 
 /* Base color */
 $base-color: #2e323a;
-$base-color-light: rgba(24, 28, 33, .06);
+$base-color-light: rgba(24, 28, 33, 0.06);
 
 /* General overrides */
 $primary: $turquoise;
@@ -23,14 +23,14 @@ $hr-height: 1px;
 /* NavBar: specifics */
 $navbar-input-color: $grey-darker;
 $navbar-input-placeholder-color: $grey-lighter;
-$navbar-box-shadow: 0 1px 0 rgba(24, 28, 33, .04);
-$navbar-divider-border: 1px solid rgba($grey-lighter, .25);
-$navbar-item-h-padding: $default-padding * .75;
-$navbar-avatar-size: 1.75em;
+$navbar-box-shadow: 0 1px 0 rgba(24, 28, 33, 0.04);
+$navbar-divider-border: 1px solid rgba($grey-lighter, 0.25);
+$navbar-item-h-padding: $default-padding * 0.75;
+$navbar-avatar-size: 1.5em;
 
 /* Aside: Bulma override */
 $menu-item-radius: 0;
-$menu-list-link-padding: $size-base * .5 0;
+$menu-list-link-padding: $size-base * 0.5 0;
 $menu-label-color: lighten($base-color, 25%);
 $menu-item-color: lighten($base-color, 30%);
 $menu-item-hover-color: $white;
@@ -42,7 +42,7 @@ $menu-item-active-background-color: darken($base-color, 2.5%);
 $aside-width: $size-base * 14;
 $aside-mobile-width: $size-base * 15;
 $aside-icon-width: $size-base * 3;
-$aside-submenu-font-size: $size-base * .95;
+$aside-submenu-font-size: $size-base * 0.95;
 $aside-box-shadow: none;
 $aside-background-color: $base-color;
 $aside-tools-background-color: darken($aside-background-color, 10%);
@@ -86,11 +86,11 @@ $modal-card-width-mobile: 90vw;
 $modal-card-foot-background-color: $white-ter;
 
 /* Notification: Bulma override */
-$notification-padding: $default-padding * .75 $default-padding;
+$notification-padding: $default-padding * 0.75 $default-padding;
 
 /* Footer: Bulma override */
 $footer-background-color: $white;
-$footer-padding: $default-padding * .33 $default-padding;
+$footer-padding: $default-padding * 0.33 $default-padding;
 
 /* Footer: specifics */
 $footer-logo-height: $size-base * 2;
@@ -99,5 +99,5 @@ $footer-logo-height: $size-base * 2;
 $progress-bar-background-color: $grey-lighter;
 
 /* Icon: specifics */
-$icon-update-mark-size: $size-base * .5;
+$icon-update-mark-size: $size-base * 0.5;
 $icon-update-mark-color: $yellow;
