--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -1,48 +1,48 @@
 .card:not(:last-child) {
-  margin-bottom: $default-padding;
+	margin-bottom: $default-padding;
 }
 
 .card {
-  border-radius: $radius-large;
-  border: $card-border;
+	border-radius: $radius-large;
+	border: $card-border;
 
-  &.has-table {
-    .card-content {
-      padding: 0;
-    }
-    .b-table {
-      border-radius: $radius-large;
-      overflow: hidden;
-    }
-  }
+	&.has-table {
+		.card-content {
+			padding: 0;
+		}
+		.b-table {
+			border-radius: $radius-large;
+			overflow: hidden;
+		}
+	}
 
-  &.is-card-widget {
-    .card-content {
-      padding: $default-padding * .5;
-    }
-  }
+	&.is-card-widget {
+		.card-content {
+			padding: $default-padding * 0.5;
+		}
+	}
 
-  .card-header {
-    border-bottom: 1px solid $base-color-light;
-  }
+	.card-header {
+		border-bottom: 1px solid $base-color-light;
+	}
 
-  .card-content {
-    hr {
-      margin-left: $card-content-padding * -1;
-      margin-right: $card-content-padding * -1;
-    }
-  }
+	.card-content {
+		hr {
+			margin-left: $card-content-padding * -1;
+			margin-right: $card-content-padding * -1;
+		}
+	}
 
-  .is-widget-icon {
-    .icon {
-      width: 5rem;
-      height: 5rem;
-    }
-  }
+	.is-widget-icon {
+		.icon {
+			width: 5em;
+			height: 5em;
+		}
+	}
 
-  .is-widget-label {
-    .subtitle {
-      color: $grey;
-    }
-  }
+	.is-widget-label {
+		.subtitle {
+			color: $grey;
+		}
+	}
 }
